--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^1.12.5"
   },
   "dependencies": {
+    "auth0": "^2.9.1",
     "express": "^4.16.2",
     "mongoose": "^4.13.6"
   }
