updated the models slightly

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
             - AUTH0_DOMAIN=${AUTH0_DOMAIN}
             - AUTH0_CLIENT_ID=${AUTH0_CLIENT_ID}
             - AUTH0_CLIENT_SECRET=${AUTH0_CLIENT_SECRET}
+            - MONGO_PATH=${MONGO_PATH}
         links:
             - mongo
         ports:
