--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "url": "https://github.com/tracklines/account-service/issues"
   },
   "devDependencies": {
-    "nodemon": "^1.12.5"
+    "nodemon": "1.12.5"
   },
   "dependencies": {
-    "auth0": "^2.9.1",
-    "express": "^4.16.2",
-    "mongoose": "^4.13.6"
+    "auth0": "2.9.1",
+    "express": "4.16.2",
+    "jsonwebtoken": "^8.1.0",
+    "mongoose": "4.13.6",
+    "uuid": "^3.1.0"
   }
 }
